Tue Sep 25 11:34:22 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Version 1.3.9 (binary, interface == 0)

	* glib/gstrfuncs.c (g_ascii_strdown): Change g_ascii_strup/strdown
	to take a 'len' argument to match g_utf8_strup/strdown. This
	hopefully will also make it more obvious that they duplicate
	the string rather than acting like g_strup/strdown.
	(Suggestion from Matthias Clasen, #59550)

2001-09-25  Tor Lillqvist  <tml@iki.fi>

	* configure.in: More Win32 automake macros. For .def files:
	GLIB_DEF, GMODULE_DEF, GOBJECT_DEF and GTHREAD_DEF. For .exp
	files: TESTGMODULE_EXP (for programs that need to export symbols,
	just testgmodule here). A new conditional, MS_LIB_AVAILABLE to
	test whether the Microsoft librarian ("ar") is available to build
	MS import libraries.
 
	* glib/Makefile.am
	* gmodule/Makefile.am: Use above. New rule to build MS import
	library.

	* glib/makefile.msc.in
	* tests/makefile.msc.in
	* tests/makefile.mingw.in: Use same DLL and import library names as
	libtool.

2001-09-24  Matthias Clasen  <matthiasc@poet.de>

	* glib/gutf8.c, glib/gunibreak.c, glib/gunicollate.c,
	glib/gunidecomp.c, glib/guniprop.c: Inline doc consistency fixes.

2001-09-24  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added "sk" to ALL_LINGUAS.

2001-09-22  Hans Breuer  <hans@breuer.org>

	* glib/giowin32.c : simply setting is_readable and is_writeable
	to TRUE does make Gimp plug-ins work again. Still no API known
	to request this info on Win32 (see #57690)

2001-09-21  Hans Breuer  <hans@breuer.org>

	* makefile.msc : added rule for glibconfig.h

	* glib/giowin32.c (g_io_channel_new_file) : always open
	in binary mode (fix for #57695)

	* glib/glib.def : updated externals

	* glib/gwin32.c : re-added LANG_* and SUBLANG_* definitions,
	which are missing from the msvc 5.0 win32 sdk

	* glib/makefile.msc.in : added gbsearcharry

Thu Sep 20 20:33:45 2001  Owen Taylor  <otaylor@redhat.com>
