@@ -1,3 +1,7 @@
+2001-09-25  Darin Adler  <darin@bentspoon.com>
+
+	* glib/gtree.h: Use gboolean for return value of GTraverseFunc.
+
 Tue Sep 25 11:34:22 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* configure.in: Version 1.3.9 (binary, interface == 0)
